chandeliers-lus/tests/compile_fail/ui/causality/redef-const.stderr
error: Attempt to redefine Global `X`, when a prior item already defines it
 --> tests/fail/ui/causality/redef-const.rs:3:5
  |
3 |     const X : float = 0.0;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
note: Already defined here
 --> tests/fail/ui/causality/redef-const.rs:2:5
  |
2 |     const X : int = 0;
  |     ^^^^^^^^^^^^^^^^^
